tcw3/designer/tests/bad/objinit_explicit_type.tcwdl
pub comp crate::Comp1 {}
pub comp crate::Comp2 {
    // A field having obj-init must not be explicitly typed
    const comp1: crate::Comp1 = crate::Comp1 {};
    //~^ ERROR Type mustn't be specified if the initializer is an object literal
}
